--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 	   			<h5>Hello and Greetings.</h5>
 	   			<h1>I'm Sharon Abraham.</h1>
 
-	   			<p class="intro-position">
+	   			<!--<p class="intro-position">
 	   				<span>Front-end Developer</span>
 	   				<span>UI/UX Designer</span> 
-	   			</p>
+	   			</p>-->
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
 
