--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/profile-pic.jpg" alt="Profile Picture">
+   				<img src="images/profile-pic.JPG" alt="Profile Picture">
 
    				<p class="lead"> TO LEARN . INNOVATE . GROW.</p>
    			</div>   			
