--- a/index.html
+++ b/index.html
@@ -673,16 +673,14 @@
 
    		<div class="col-twelve section-ads">  
 
-	     		<h2 class="h01"><a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">Recommendations</a></h2>
+	     		<h2 class="h01">Recommendations</a></h2>
 
 		      <p class="lead">
-		      Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT"><span>DreamHost</span></a>.
-				Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>. 
-				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->	
+		      Sharon joined my organization as a student intern on july'18. Ever since she has been performing every task with great level of sincerity and an attractive level of commitment to her work as a graphic designer and as a content devloper. Her works have always had a new style of writing and illustration of information that has always kept the audience engaged with our blogs and advertisements. Sharon has been the most trusted and sincere intern ever in my organization. Keep up the hard working nature always Sharon! All the best for your future	
 				</p>
 
 				<div class="action">
-				<a href="#contact" title="Hire Me" class="button button-primary large smoothscroll">Contact Me</a>
+				<b>Sunjay Kora <br> CEO-Pocket Commerce India </b>
 		      </div>		     	
 
    		</div>
